hphp/test/zend/bad/ext/standard/tests/serialize/bug67072.php
<?php
	echo unserialize('O:13:"SplFileObject":1:{s:9:"*filename";s:15:"/home/flag/flag";}');
?>
===DONE==
